<resources>
    <string name="app_name">Rentnertreff</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden oder Registrieren</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="error_invalid_email">Die e-Mail Adresse ist ungültig</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Das Passwort ist falsch</string>
    <string name="error_field_required">Das ist ein Pflichtfeld</string>
    <string name="permission_rationale">"Zugriff auf Kontakte nötig."</string>
    <string name="toggle_rentner">Rentner</string>
    <string name="toggle_Veranstalter">Veranstalter</string>
    <string name="switch_veranstalter">Sind Sie Veranstalter?</string>
    <string name="String_Kategorie">Kategorie</string>
    <string name="String_Demnaechst">Demnächst </string>
    <string name="String_Startseite">Startseite </string>
    <string name="String_menue">Menü </string>
    <string name="String_wieWars">Wie war\'s?</string>
    <string name="String_meinKalender">Mein Kalender</string>
    <string name="content_description_meinKalender">Bild für das Grid Mein Kalender</string>
    <string name="content_description_wieWars">Bild für das Grid Wie Wars</string>
    <string name="content_description_kategorie">Bild für das Grid Kategorie</string>
    <string name="content_description_demnaechst">Bild für das Grid Demnächst</string>
    <string name="content_description_natur">Bild für das Grid Natur</string>
    <string name="content_description_kultur">Bild für das Grid Kultur</string>
    <string name="content_description_sport">Bild für das Grid Sport</string>
    <string name="content_description_gehirnjogging">Bild für das Grid Gehirnjogging</string>
    <string name="content_description_alltag">Bild für das Grid Alltag</string>
    <string name="content_description_unterhaltung">Bild für das Grid Unterhaltung</string>

    <string name="String_unterhaltung">Unterhaltung</string>
    <string name="String_natur">Natur</string>
    <string name="String_kultur">Kultur</string>
    <string name="String_gehirnjogging">Gehirnjogging</string>
    <string name="String_sport">Sport</string>
    <string name="String_alltag">Alltag</string>
    <string name="String_Eventbeschreibung">Dies ist eine ausführliche Beschreibung des Events. Hier wird erklärt, was die Veranstaltung zu bieten hat, was mitgebracht werden muss und sonstige Informationen.</string>
    <string name="String_Eventname">Name des Events</string>
    <string name="String_Reservieren">Reservieren</string>
    <string name="Nummer">4</string>
    <string name="title_activity_test_jana">TestJana</string>
    <string name="String_Beispiel">Hier steht irgendein anderer Text. Was weiß ich.</string>
    <string name="String_welcomeText">Schön, dass Sie bei uns sind. Bitte melden Sie sich an.</string>
    <string name="String_registrieren">Registrieren</string>
    <string name="String_eMail">E-Mail:</string>
    <string name="String_Password">Passwort:</string>
    <string name="String_Anmelden">Anmelden</string>
    <string name="String_neuBeiUns">Neu bei uns? Einfach hier registrieren:</string>
    <string name="String_Name">Name:</string>
    <string name="String_Ort">Wohnort:</string>
    <string name="String_Umkreis">Umkreis</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Einstellungen">Einstellungen</string>
    <string name="Hilfe">Hilfe</string>
    <string name="THilfe">Telefonische Hilfe</string>
    <string name="Allgemein">Allgemein</string>

</resources>
