<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.julian.rentnertreff.Fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/grid_yellow"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_unterhaltung"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description_unterhaltung"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView_unterhaltung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/String_unterhaltung"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/grid_blue"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_natur"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description_natur"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView_natur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/String_natur"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/grid_red"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_sport"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/content_description_sport"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView_Kategorie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/String_sport"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/grid_green"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_alltag"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description_alltag"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView_demnaechst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/String_alltag"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/grid_brown"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_kultur"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description_kultur"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView_bewertung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/String_kultur"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/grid_purple"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_gehirnjogging"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description_gehirnjogging"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView_meinKalender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/String_gehirnjogging"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

        </TableLayout>
    </ScrollView>

</FrameLayout>
