<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.julian.rentnertreff.Fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/kategorieLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_rounded_corners_green"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_kategorie"
                        android:layout_width="160dp"
                        android:layout_height="165dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/content_description_kategorie"
                        app:srcCompat="@drawable/kategorie" />

                    <TextView
                        android:id="@+id/textView_Kategorie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:autoText="false"
                        android:fontFamily="casual"
                        android:text="@string/String_Kategorie"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/DemnaechstLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_rounded_corners_green"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_demnaechst"
                        android:layout_width="160dp"
                        android:layout_height="145dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/content_description_demnaechst"
                        app:srcCompat="@drawable/demnaechst" />

                    <TextView
                        android:id="@+id/textView_demnaechst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="casual"
                        android:text="@string/String_Demnaechst"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/Bewertung_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_rounded_corners_green"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_bewertung"
                        android:layout_width="160dp"
                        android:layout_height="145dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/content_description_demnaechst"
                        app:srcCompat="@drawable/wiewars" />

                    <TextView
                        android:id="@+id/textView_bewertung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="casual"
                        android:text="@string/String_wieWars"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/MeinKalender_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_rounded_corners_green"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_meinKalender"
                        android:layout_width="160dp"
                        android:layout_height="165dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description_meinKalender"
                        app:srcCompat="@drawable/kalender" />

                    <TextView
                        android:id="@+id/textView_meinKalender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="casual"
                        android:text="@string/String_meinKalender"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

        </TableLayout>
    </ScrollView>

</FrameLayout>
